Bug 119554 - Sidebar: Moving focus into panel content with Enter or tab key hides focus when panel is in collapsed state
Summary: Sidebar: Moving focus into panel content with Enter or tab key hides focus wh...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.6.2 release
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.2.0
Keywords: accessibility
Depends on:
Blocks: Sidebar-Accessibility
  Show dependency treegraph
 
Reported: 2018-08-28 03:09 UTC by Jim Raykowski
Modified: 2019-03-15 08:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-08-28 03:09:37 UTC
Here are the steps to reproduce:

1) Open Sidebar Menu > View > Sidebar or Ctrl+F5
2) Select Properties deck
3) Click in Styes panel combo box
Cursor is in combo box
4) Press Escape key
Focus rectangle is around Styles panel title
5) Press Space key to collapse the panel
6) Press Enter or Tab key

Results:
Focus is hidden in collapsed Styles panel

Expected Results:
Panel is expanded so focus is not hidden
Comment 1 Xisco Faulí 2018-08-28 09:51:42 UTC
Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: a922f56cbf25f78534cd2d36bf13a86a4f15d970
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 2 Jim Raykowski 2018-08-28 18:05:26 UTC
Xisco, thanks for your time spent reproing

Here is a patch that expands a collapsed when panel content gets focus:
https://gerrit.libreoffice.org/#/c/59737/
Comment 3 Commit Notification 2018-08-29 14:41:28 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1eeda4a32f33b9f37f093c6e9905c3ce9523b81a

tdf#119554 Expand collapsed panel when panel content gets focus

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Cor Nouws 2018-08-29 18:04:26 UTC
Really appreciating to see all the improvements making working in this area so much smoother and more pleasant. Thanks a lot, Jim :) !
Comment 5 Jim Raykowski 2018-08-30 21:23:13 UTC
(In reply to Cor Nouws from comment #4)
> Really appreciating to see all the improvements making working in this area
> so much smoother and more pleasant. Thanks a lot, Jim :) !

Cor, Thank you and all who keep this project open. I really appreciate it!