tdf#119554 Expand collapsed panel when panel content gets focus

Change-Id: I1af7a9e93affc5c6e5e3ba90ba335e59a0900d20
Reviewed-on: https://gerrit.libreoffice.org/59737
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>